<resources>
    <string name="app_name">QuizAppAndroid</string>
    <string name="timer">Timer</string>
    <string name="progressionQuiz"> progression </string>
    <string name="question">Question</string>
    <string name="resultat">Resultat!</string>
    <string name="commencer">Commencer</string>
    <string name="categorie">Catégorie</string>
    <string name="quitter">Quitter</string>
    <string name="score">Score :</string>
    <string name="reponseUnique">Réponse Unique</string>
    <string name="reponseMultiple">Réponse Multiple</string>
    <string name="nouvellePartie">Une Nouvelle Partie ?</string>
    <string name="reset">Reset</string>
    <string name="profil">Votre Profile</string>
    <string name="profilScore">Score</string>
    <string name="profilAffichage">Profile</string>

</resources>
