<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arsene.quizappandroid.QuizActivity"
    android:orientation="vertical"
    android:background="@drawable/img_question"
    android:id="@+id/quizLayout"
    >

    <TextView
        android:id="@+id/tvNomJoeur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28dp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/layoutMarginBottom"
        android:layout_marginTop="@dimen/layoutMarginTop"
        android:orientation="horizontal">

        <TextView
            android:background="@color/noir"
            android:id="@+id/timerQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/timer"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/text_size" />

        <TextView
            android:background="@color/noir"
            android:id="@+id/progressionQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/progressionQuiz"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:background="@color/noir"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size"
            android:text="@string/question"
            android:layout_marginBottom="@dimen/layoutMarginBottom"
            android:layout_marginTop="@dimen/textViewQuestionMarginTop"
            android:gravity="center_horizontal"
            android:id="@+id/questionQuiz"
            android:textColor="@android:color/holo_blue_dark"
            ></TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/layoutMarginBottom"
        android:layout_marginTop="@dimen/layoutMarginTop"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/layoutMarginBottom"
        android:layout_marginTop="@dimen/layoutMarginTop"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/layoutMarginBottom"
        android:layout_marginTop="@dimen/layoutMarginTop"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />

    </LinearLayout>


    <TableLayout
        android:background="@color/noir"
        android:id="@+id/buttonTableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/layoutMarginTop"
        android:layout_weight="1"
        android:stretchColumns="0,1,2">

        <TableRow
            android:id="@+id/tableRow0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"></TableRow>
    </TableLayout>

    <TextView
        android:background="@color/noir"
        android:id="@+id/resultatQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/dimenResultat"
        android:text="@string/resultat"
        android:gravity="center"
        android:layout_marginBottom="@dimen/layoutMarginBottom"
        android:textColor="@android:color/holo_blue_dark"></TextView>
    <TextView
        android:background="@color/noir"
        android:id="@+id/scoreTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="25sp"/>


</LinearLayout>
